Closed
Bug 1951368
Opened 8 months ago
Closed 8 months ago
Deleting messages in the "Search Messages…" window causes empty lines.
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(thunderbird_esr128 unaffected, thunderbird136 wontfix, thunderbird137? affected)
RESOLVED
FIXED
138 Branch
| Tracking | Status | |
|---|---|---|
| thunderbird_esr128 | --- | unaffected |
| thunderbird136 | --- | wontfix |
| thunderbird137 | ? | affected |
People
(Reporter: welpy-cw, Assigned: welpy-cw)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to reproduce:
- Open the context menu of a real folder and select "Search Messages…".
- Enter a search term leading to results.
- Delete one or more of the messages.
Expected result:
Deleted messages are removed from the view, decreasing the number of rows.
Actual result:
Deleted messages are removed, but the number of rows stays the same, leading to empty rows at the end of the view.
| Assignee | ||
Comment 1•8 months ago
|
||
Updated•8 months ago
|
Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
| Assignee | ||
Updated•8 months ago
|
Keywords: checkin-needed-tb
Target Milestone: --- → 138 Branch
| Assignee | ||
Updated•8 months ago
|
Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/5766aa612cea
Fix row count in "Search Messages…" after deleting. r=mkmelin
You need to log in
before you can comment on or make changes to this bug.
Description
•