Bug 1951368 - Fix row count in "Search Messages…" after deleting. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D240137

--HG--
extra : amend_source : b997ca304a21a7083f45461a1530b298373bdc56